removing images, updating about pics and fixing spacing

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -6360,27 +6360,12 @@ button.close {
   color: white !important;
 }
 
-.ctn-icon:hover,
-.ctn-icon:focus,
-.ctn-icon:active {
-  scale: (1.1);
-}
-
 .ctn-icon {
-  animation: jump-arrow 2.5s infinite;
-  bottom: 0;
-  margin-left: calc(50% - 1.25rem);
-  right: 4rem;
-  color: #ffffff;
-  display: block;
-  font-size: 2.5em;
-  line-height: 1.5em;
-  text-align: center;
-  transform: translatex(-50%);
+  display: none;
 }
 
 .member {
-  height: 30rem;
+  height: 35rem;
   border-radius: 100%;
 }
 
@@ -6395,10 +6380,9 @@ button.close {
   text-align: center;
   border-radius: 1rem;
   color: black;
-  max-width: 300px;
-  max-height: 400px;
-  height: 50%;
-  width: 30%;
+  width: 300px;
+  height: 350px;
+
   .btn {
     color: white;
     font-size: 2rem;
